...
    // MARK: - Navigation

    // In a storyboard-based application, you will often want to do a little preparation before navigation
    
    @IBAction func logoutTapped(sender: AnyObject) {
        
        let alertController = UIAlertController(title: "Atención", message:
            "¿Desea cerrar sesión?", preferredStyle: UIAlertControllerStyle.Alert)
        
        // Delete action
        alertController.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.Default, handler: { (alertController) -> Void in
            // Logs out
            self.performSegueWithIdentifier("logoutSegue", sender: sender)
        }))
        
        // Cancel action
        alertController.addAction(UIAlertAction(title: "Cancelar", style: UIAlertActionStyle.Default,handler: { (alertController) -> Void in
...
