...


/*
{
    "IdEspecialidad": 1,
    "Codigo": "INF",
    "Nombre": "Ingeniería Informática",
    "Descripcion": "Tendrás una excelente base tecnológica y científica para la automatización de la información en cualquier organización.",
    "deleted_at": null,
    "created_at": "2016-06-18 05:00:00",
    "updated_at": "2016-06-18 17:29:10",
    "IdDocente": "1",
    "coordinator": null
...
