...
                            self.performSegueWithIdentifier("facultyListSegue", sender: self)
                            self.activityIndicator.stopAnimating()
                        }
                    }
                case .Failure(_):
                    self.activityIndicator.stopAnimating()
                    self.alertMessage("Usuario/Contrasena incorrectos.", winTitle: "Error")
                }
            }
    }

    //File management
    
...
